--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
         "@project-serum/anchor": "^0.21.0",
-        "@types/chai": "^4.3.0"
+        "@types/chai": "^4.3.0",
+        "byteify": "^2.0.10"
     },
     "devDependencies": {
         "@types/mocha": "^9.0.0",
