--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "dependencies": {
+        "@metaplex/js": "^4.12.0",
+        "@nfteyez/sol-rayz": "^0.10.2",
         "@project-serum/anchor": "^0.21.0",
         "@types/chai": "^4.3.0",
         "byteify": "^2.0.10"
