--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,9 @@
 {
+    "scripts": {
+        "build": "tsc ."
+    },
     "dependencies": {
+        "@types/node": "^17.0.21",
         "@metaplex/js": "^4.12.0",
         "@nfteyez/sol-rayz": "^0.10.2",
         "@project-serum/anchor": "^0.21.0",
@@ -13,8 +17,5 @@
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
         "typescript": "^4.3.5"
-    },
-    "scripts": {
-        "dijs": "tsc --project ./js"
     }
 }
