--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "build": "tsc ."
+        "build": "rollup -c"
     },
     "dependencies": {
         "@types/node": "^17.0.21",
@@ -9,7 +9,16 @@
         "@project-serum/anchor": "^0.21.0",
         "@types/chai": "^4.3.0",
         "byteify": "^2.0.10",
-        "rxjs": "^7.5.5"
+        "rxjs": "^7.5.5",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-replace": "^3.0.1",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "rollup": "^2.63.0",
+        "rollup-plugin-node-builtins": "^2.1.2",
+        "rollup-plugin-node-globals": "^1.4.0",
+        "rollup-plugin-terser": "^7.0.2"
     },
     "devDependencies": {
         "@types/mocha": "^9.0.0",
@@ -17,5 +26,11 @@
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
         "typescript": "^4.3.5"
-    }
+    },
+    "main": "dist/legacy.cjs.js",
+    "module": "dist/legacy.esm.js",
+    "browser": "dist/legacy.umd.js",
+    "files": [
+      "dist"
+    ]
 }
