--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
         "@project-serum/anchor": "^0.21.0",
         "@types/chai": "^4.3.0",
         "byteify": "^2.0.10",
+        "js-yaml": "^4.1.0",
         "rxjs": "^7.5.5"
     },
     "devDependencies": {
+        "@types/js-yaml": "^4.0.5",
         "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
         "typescript": "^4.3.5"
     },
-    "scripts": {
-    }
+    "scripts": {}
 }
